--- a/config/database.yml
+++ b/config/database.yml
@@ -6,25 +6,19 @@
 #
 default: &default
   adapter: postgresql
+  encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
 
 development:
-    adapter: postgresql
-    database: Instagram_development
-    host: localhost
+  <<: *default
+  database: Instagram_development
 
-# development:
-#   <<: *default
-#   database: db/development.sqlite3
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test
+  database: Instagram_test
 
-production:
+ production:
   <<: *default
-  database: db/Instagram_development
+  database: Instagram_production
+  username: Instagram
+  password: <%= ENV['Instagram_DATABASE_PASSWORD'] %>
